# system_programming_project

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  INSTALL.md  MANUAL.md  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
docs/: cpp-structure.md  docker-research.md
include/: config.hpp  database.hpp  student.h
include/database/: database.hpp
include/services/: student_service.hpp
sql/: init.sql
src/: config.cpp  database.cpp  main.cpp
src/database/: database.cpp
src/models/: student.hpp
src/services/: student_service.cpp  student_service.hpp
